# Indie-Studio

./: .gitignore  CMakeLists.txt  README.md  bomberman.sh  doxyfile
assets/models/: blow.glb  treemap.glb
assets/models/fox/: fox_swordless.glb
assets/scenes/Game/map-templates/: basic  empty  floor
cmake/: Findraylib.cmake
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  Core.cpp  Core.hpp  CoreParameters.cpp  CoreParameters.hpp  GameParameters.cpp  GameParameters.hpp  Timer.cpp  Timer.hpp
src/entity/: Button.cpp  Button.hpp  CMakeLists.txt  IEntity2D.hpp  IEntity3D.hpp
src/entity/bombs/: Bomb.cpp  Bomb.hpp  CMakeLists.txt
src/entity/boxes/: Box.cpp  Box.hpp  CMakeLists.txt  Crate.cpp  Crate.hpp  PowerUp.cpp  PowerUp.hpp
src/entity/player/: CMakeLists.txt  Controls.cpp  Controls.hpp  Gamepad.cpp  Gamepad.hpp  Player.cpp  Player.hpp
src/enum/: CMakeLists.txt  buttonEnum.hpp  commandModeEnum.hpp  gameEnum.hpp  sceneEnum.hpp  shapeEnum.hpp
src/map/: CMakeLists.txt  Map.cpp  Map.hpp
src/map/map_generation/: CMakeLists.txt  MapGeneration.cpp  MapGeneration.hpp  MapPattern.cpp  MapPattern.hpp
src/raylib_encapsulation/: CMakeLists.txt  Collisions.cpp  Collisions.hpp  Draw.cpp  Draw.hpp  Images.cpp  Images.hpp  Input.cpp  Input.hpp  Miscellaneous.cpp  Miscellaneous.hpp  Mouse.cpp  Mouse.hpp  Music.cpp  Music.hpp  Rcamera.cpp  Rcamera.hpp  Rgesture.cpp  Rgesture.hpp  Sound.cpp  Sound.hpp  Text.cpp  Text.hpp  TwoDTexture.cpp  TwoDTexture.hpp  Vector2D.cpp  Vector2D.hpp  Vector3D.cpp  Vector3D.hpp  Window.cpp  Window.hpp  raylib.hpp
src/raylib_encapsulation/3DShapes/: CMakeLists.txt  Circle3D.cpp  Circle3D.hpp  Collider.cpp  Collider.hpp  Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  Line3D.cpp  Line3D.hpp  MeshCubicmap.cpp  MeshCubicmap.hpp  Model3D.cpp  Model3D.hpp  Plane.cpp  Plane.hpp  Point3D.cpp  Point3D.hpp  Sphere.cpp  Sphere.hpp  Triangle3D.cpp  Triangle3D.hpp
src/raylib_encapsulation/Shapes/: CMakeLists.txt  CircleShape.cpp  CircleShape.hpp  IShapes.hpp  LineShape.cpp  LineShape.hpp  PixelShape.cpp  PixelShape.hpp  PolygonShape.cpp  PolygonShape.hpp  RectangleShape.cpp  RectangleShape.hpp  TriangleShape.cpp  TriangleShape.hpp
src/scene/: CMakeLists.txt  IScene.hpp
src/scene/commands/: CMakeLists.txt  CommandsController.cpp  CommandsController.hpp  CommandsKeyboard.cpp  CommandsKeyboard.hpp  FoxBoxKeyboard.cpp  FoxBoxKeyboard.hpp
src/scene/game/: CMakeLists.txt  FoxBox.cpp  FoxBox.hpp  Game.cpp  Game.hpp  Hud.cpp  Hud.hpp  Pause.cpp  Pause.hpp  TextWithValue.cpp  TextWithValue.hpp  WinMenu.cpp  WinMenu.hpp
src/scene/gameSettings/: CMakeLists.txt  GameSettings.cpp  GameSettings.hpp  HowToPlayBox.cpp  HowToPlayBox.hpp
src/scene/menu/: CMakeLists.txt  Menu.cpp  Menu.hpp  MovingBackground.cpp  MovingBackground.hpp  Parallax.cpp  Parallax.hpp
src/scene/settings/: CMakeLists.txt  ScrollableValue.cpp  ScrollableValue.hpp  Settings.cpp  Settings.hpp
